deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server1-deployment
  labels:
    app: server1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server1
  template:
    metadata:
      labels:
        app: server1
    spec:
      containers:
      - name:  server-1
        image: fazlulkarim105925/server-1:v1
        ports:
        - containerPort: 5001
