deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server2-deployment
  labels:
    app: server2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server2
  template:
    metadata:
      labels:
        app: server2
    spec:
      containers:
      - name: server-2
        image: fazlulkarim105925/server-2:v1
        ports:
        - containerPort: 5002
