svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: server2-service
spec:
  selector:
    app: server2
  ports:
    - port: 5002
      targetPort: 5002
